src/objects/LMA_Audit__c.object
<CustomObject>
    <description>Confident Governance - This object for LMA Audit purpose</description>
    <fields>
        <fullName>App_Name__c</fullName>
        <description>License assigned app name</description>
        <inlineHelpText>It Shows License assigned app name</inlineHelpText>
        <label>App_Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>it stores Contact</description>
        <inlineHelpText>Contact</inlineHelpText>
        <label>Contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Expire_Date__c</fullName>
        <description>it stores Expire Date for licence</description>
        <inlineHelpText>It shows Expire Date for Licence</inlineHelpText>
        <label>Expire_Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <description>It stores Install Date for Licenced Application</description>
        <inlineHelpText>It shows Install Date for Licenced Application</inlineHelpText>
        <label>Install_Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Key__c</fullName>
        <description>It stores Licence key</description>
        <inlineHelpText>It shows Licence key</inlineHelpText>
        <label>License_Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <description>It stores Licence Type</description>
        <inlineHelpText>It shows Licence Type</inlineHelpText>
        <label>License_Type</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Seats__c</fullName>
        <description>It stores Number of Licence</description>
        <inlineHelpText>It Shows Number of Licence</inlineHelpText>
        <label>No. of Seats</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Version__c</fullName>
        <description>it stores Package version to which licence provided</description>
        <inlineHelpText>It shows Package Version</inlineHelpText>
        <label>Package_Version</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perpetual__c</fullName>
        <description>This field is for giving unlimited licencing</description>
        <inlineHelpText>It shows perpetual field information</inlineHelpText>
        <label>Perpetual</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Show license status</description>
        <inlineHelpText>Show license status</inlineHelpText>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Org_Id__c</fullName>
        <label>Subscriber_Org_Id</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User_ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LMA Audit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LMA-{0000}</displayFormat>
        <label>LMA_Audit No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMA_Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>